links point to google scholar profile

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a href="https://ryan-zeyuan-chen.github.io/">Ryan Zeyuan Chen</a>,
+                        <a href="https://scholar.google.com/citations?user=AUVj0LYAAAAJ">Ryan Zeyuan Chen</a>,
                         <a href="https://scholar.google.ca/citations?user=0h1At3cAAAAJ">Nan Liang</a>,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE/RAS IROS</em>, 2022
                         <br>
@@ -117,7 +117,7 @@
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=0rQBVRQAAAAJ">Priyanka Rao</a>,
                         <a href="https://scholar.google.com/citations?user=IvJpoQcAAAAJ">Quentin Peyron</a>,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>Frontiers in Robotics and AI</em>, 2022
                         <br>
@@ -147,7 +147,7 @@
                         <a href="https://scholar.google.ca/citations?user=0h1At3cAAAAJ">Nan Liang</a>
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.ca/citations?user=Hp2dORMAAAAJ">Sven Lilge</a>,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE ICRA</em>, 2021
                         <br>
@@ -174,8 +174,8 @@
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.ca/citations?user=Hp2dORMAAAAJ">Sven Lilge</a>,
-                        Phuong Le,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="PhuongLe">Phuong Le</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IFRR RSS Workshop on Retrospectives in Robotics</em>, 2020
                         <br>
@@ -208,7 +208,7 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE RA-L</em>, 2019
                         <br>
@@ -236,7 +236,7 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IFRR RSS</em>, 2019
                         <br>
@@ -294,8 +294,8 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        Vincent Modes,
-                        <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+                        <a href="VincentModes">Vincent Modes</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
                         <br><a href="paper/GrassmannModesBurgner-Kahrs_IROS_2018.pdf">paper</a>
