refine research segment

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a href="data/bio.txt">Bio</a> &nbsp/&nbsp
                             <a href="https://scholar.google.com/citations?hl=en&user=6nbw0sgAAAAJ">Google Scholar</a>
                             &nbsp/&nbsp
-                            <a href="https://github.com/reinhardgrassmann/">Github</a> &nbsp/&nbsp
+                            <a href="https://github.com/reinhardgrassmann/">GitHub</a> &nbsp/&nbsp
                             <a href="https://www.semanticscholar.org/author/R.-Grassmann/65752777">Semantic Scholar</a>
                         </p>
                     </td>
@@ -64,6 +64,21 @@
                         <heading>Research</heading>
                         <p>
                             I'm interested in continuum robotics, machine learning, and quaternion.
+                        </p>
+                        <p>
+                            During my research adventures, I have gratefully collaborated or am still collaborating with
+                            (in alphabetical order)
+                            <a href="https://crl.utm.utoronto.ca/jbk.html">J. Burgner-Kahrs</a>,
+                            <a href="https://ryan-zeyuan-chen.github.io/">R. Z. Chen</a>,
+                            <a href="https://www.mirmi.tum.de/en/rsi/team/haddadin-sami/">S. Haddadin</a>,
+                            L. Johannsmeier,
+                            V. Modes,
+                            P. Le,
+                            N. Liang,
+                            S. Lilge,
+                            <a href="https://team.inria.fr/defrost/team-members/quentin-peyron/">Q. Peyron</a>,
+                            and,
+                            P. Rao.
                         </p>
                     </td>
                 </tr>
