formating of theses section

--- a/index.html
+++ b/index.html
@@ -355,9 +355,8 @@
                     <td valign="middle" width="100%">
                         <p><i>"Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular
                             Continuum Robots"</i></p>
-                        <p>Supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                        <p><strong>Master’s thesis</strong> supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
-                        <p>Master’s thesis</p>
                     </td>
                 </tr>
 
@@ -369,9 +368,8 @@
                     <td valign="middle" width="100%">
                         <p><i>"Generating Smooth Trajectories for Obstacle Avoidance via Quaternions in Cartesian
                             Space"</i></p>
-                        <p>Supervised by <a href="https://en.wikipedia.org/wiki/Sami_Haddadin">Prof. Dr.-Ing. Sami
+                        <p><strong>Bachelor’s thesis</strong> supervised by <a href="https://en.wikipedia.org/wiki/Sami_Haddadin">Prof. Dr.-Ing. Sami
                             Haddadin</a></p>
-                        <p>Bachelor’s thesis</p>
                     </td>
                 </tr>
 
@@ -383,8 +381,7 @@
                     <td valign="middle" width="100%">
                         <p><i>"Data Fusion Using an Extended Kalman Filter for an Optically Navigated Light Weight
                             Robot"</i></p>
-                        <p>Supervised by Prof. Dr.-Ing. Tobias Ortmaier</p>
-                        <p>Project thesis</p>
+                        <p><strong>Project thesis</strong> supervised by Prof. Dr.-Ing. Tobias Ortmaier</p>
                     </td>
                 </tr>
 
