added Sven's page

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <br>
                         <a href="https://scholar.google.ca/citations?user=0h1At3cAAAAJ">Nan Liang</a>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a href="https://scholar.google.ca/citations?user=Hp2dORMAAAAJ">Sven Lilge</a>,
+                        <a href="https://www.cs.toronto.edu/~slilge/">Sven Lilge</a>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE ICRA</em>, 2021
