--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a href="https://scholar.google.ca/citations?user=Hp2dORMAAAAJ">Sven Lilge</a>,
+                        <a href="https://www.cs.toronto.edu/~slilge/">Sven Lilge</a>,
                         <a href="PhuongLe">Phuong Le</a>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
