--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                         <a href="https://github.com/ContinuumRoboticsLab/CRL-Dataset-CTCR-Pose">GitHub</a>
                         <p>We provide the first public dataset for a three-tube CTCR to democrotize research on
                             learning-based and physics-based modelling of the kinematics.</p>
+                        <br>
+                        &#35;Dataset &#35;MachineLearning &#35;ContinuumRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -144,6 +147,9 @@
                         <p>We propose a segment design that combines two distinct characteristics of tendon-driven
                             continuum robots, i.e. variable length and non-straight tendon routing, into a single
                             segment by enabling rotation of its backbone.</p>
+                        <br>
+                        &#35;Design &#35;ContinuumRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -173,6 +179,9 @@
                         <a href="data/LiangBurgner-Kahrs_et_al_ICRA_2021.bib">BibTex</a>
                         <p>We introduce methodologies to compute the inverse kinematics for concentric tube continuum
                             robots from a desired shape as input.</p>
+                        <br>
+                        &#35;MachineLearning &#35;ContinuumRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -206,6 +215,9 @@
                         <a href="data/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.bib">BibTex</a>
                         <p>We discuss the impact of the current habit of developing a variety of different prototypes on
                             the emergence of a ubiquitous robotic platform.</p>
+                        <br>
+                        &#35;SystemThinking &#35;ContinuumRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -234,6 +246,9 @@
                         <a href="data/GrassmannBurgner-Kahrs_RA-L_2019.bib">BibTex</a>
                         <p>We address the problem of generating a singularity-free trajectory for multiple via poses in
                             SE(3), while complying with the requirement of C4 continuity.</p>
+                        <br>
+                        &#35;TrajectoryGeneration &#35;Quaternion &#35;LightWeightRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -264,6 +279,9 @@
                         <a href="paper/GrassmannBurgner-Kahrs_RSS_2019_Poster.pdf">Poster</a>
                         <p>We investigate the influence of different joint space and orientation representations on the
                             approximation of the forward kinematics.</p>
+                        <br>
+                        &#35;MachineLearning &#35;Quaternion &#35;ContinuumRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -293,6 +311,9 @@
                         <p>We introduce a point-to-point trajectory planner for serial robotic structures that combines
                             the ability to avoid self-collisions and to respect motion constraints, while complying with
                             the requirement of being C4 continuous.</p>
+                        <br>
+                        &#35;TrajectoryGeneration &#35;Quaternion &#35;LightWeightRobot
+                        <br>
                     </td>
                 </tr>
 
@@ -320,6 +341,9 @@
                         <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
                         <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric
                             tube continuum robots from real robot measurements.</p>
+                        <br>
+                        &#35;MachineLearning &#35;Quaternion &#35;ContinuumRobot
+                        <br>
                     </td>
                 </tr>
 
