--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             V. Modes,
                             P. Le,
                             N. Liang,
-                            S. Lilge,
+                            <a href="https://www.cs.toronto.edu/~slilge/">S. Lilge</a>,
                             <a href="https://team.inria.fr/defrost/team-members/quentin-peyron/">Q. Peyron</a>,
                             and,
                             P. Rao.
