--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
                 <!--GrassmannBurgner-Kahrs_et_al_IROS_2022-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="109" src="images/2022_IROS_setup_tinywow.png" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
                         <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">
                             <papertitle>A Dataset and Benchmark for Learning the Kinematics of Concentric Tube Continuum
                                 Robots
@@ -122,10 +122,10 @@
 
                 <!--GrassmannBurgner-Kahrs_et_al_Frontiers_2022-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="156" src="images/2022_dof_tinywow.jpg" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
                         <a href="https://doi.org/10.3389/frobt.2022.873446">
                             <papertitle>FAS -- A Fully Actuated Segment for Tendon-Driven Continuum Robots</papertitle>
                         </a>
@@ -151,10 +151,10 @@
 
                 <!--LianBurgner-Kahrs_et_al_ICRA_2021-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="92" src="images/2020_Image2joint_tinywow.png" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
                         <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">
                             <papertitle>Learning-based Inverse Kinematics from Shape as Input for Concentric Tube
                                 Continuum Robots
@@ -181,11 +181,11 @@
 
                 <!--GrassmannBurgner-Kahrs_et_al_RSS_WS_2020-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="62"
                              src="images/2020_PrototypeDevelopmentSystemThinking_tinywow.png" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
                         <a href="https://openreview.net/forum?id=bYLFxFQPFtX">
                             <papertitle>CTCR Prototype Development: An Obstacle in the Research Community?</papertitle>
                         </a>
@@ -215,11 +215,11 @@
 
                 <!--GrassmannBurgner-Kahrs_RA-L_2019-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="180" src="images/2019_TrajectoryGeneration_tinywow.png"
                              width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
                         <a href="https://doi.org/10.1109/LRA.2019.2931133">
                             <papertitle>Quaternion-Based Smooth Trajectory Generator for Via Poses in SE(3) Considering
                                 Kinematic Limits in Cartesian Space
@@ -244,11 +244,11 @@
 
                 <!--GrassmannBurgner-Kahrs_RSS_2019-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="137" src="images/2019_RotationErrorComparision_tinywow.png"
                              width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
                         <a href="https://doi.org/10.15607/RSS.2019.XV.017">
                             <papertitle>On the Merits of Joint Space and Orientation Representations in Learning the
                                 Forward Kinematics in SE(3)
@@ -275,10 +275,10 @@
 
                 <!--GrassmannJohannsmeierHaddadin_IROS_2018-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="104" src="images/2018_PathScheduling_tinywow.png" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
                         <a href="https://doi.org/10.1109/IROS.2018.8594339">
                             <papertitle>Smooth Point-to-Point Trajectory Planning in SE(3) with Self-Collision and Joint
                                 Constraints Avoidance
@@ -305,10 +305,10 @@
 
                 <!--GrassmannModesBurgner-Kahrs_et_al_IROS_2018-->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="119" src="images/2018_IROS_PosError_tinywow.png" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
                         <a href="https://doi.org/10.1109/IROS.2018.8594451">
                             <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum
                                 Robot in SE(3)
@@ -357,7 +357,7 @@
 
                 <!-- Masterarbeit -->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="114" src="images/Thesis_MA_tinywow.png" width="160">
                     </td>
                     <td valign="middle" width="100%">
@@ -370,10 +370,10 @@
 
                 <!-- Bachelorarbeit -->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="160" src="images/Thesis_BA_tinywow.png" width="160">
                     </td>
-                    <td valign="middle" width="100%">
+                    <td style="background-color:#f4f5f4" valign="middle" width="100%">
                         <p><i>"Generating Smooth Trajectories for Obstacle Avoidance via Quaternions in Cartesian
                             Space"</i></p>
                         <p><strong>Bachelor’s thesis</strong> supervised by <a href="https://en.wikipedia.org/wiki/Sami_Haddadin">Prof. Dr.-Ing. Sami
@@ -383,7 +383,7 @@
 
                 <!-- Studienarbeit -->
                 <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
+                    <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="160" src="images/Thesis_SA_tinywow.png" width="160">
                     </td>
                     <td valign="middle" width="100%">
