updated hashtag and text

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                         <a href="https://doi.org/10.3389/frobt.2022.873446">Front. Robot. AI</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_Frontiers_2022.bib">BibTex</a>
-                        <p>We propose a segment design that combines two distinct characteristics of tendon-driven
+                        <p>To achieve variable tendon routing, we propose a segment design that combines two distinct characteristics of tendon-driven
                             continuum robots, i.e. variable length and non-straight tendon routing, into a single
                             segment by enabling rotation of its backbone.</p>
-                        &#35;Design &#35;ContinuumRobot
+                        &#35;Design &#35;VariableTendonRouting &#35;ContinuumRobot
                     </td>
                 </tr>
 
@@ -175,7 +175,7 @@
                         <a href="data/LiangBurgner-Kahrs_et_al_ICRA_2021.bib">BibTex</a>
                         <p>We introduce methodologies to compute the inverse kinematics for concentric tube continuum
                             robots from a desired shape as input.</p>
-                        &#35;MachineLearning &#35;ContinuumRobot
+                        &#35;MachineLearning &#35;ShapeRepresentation &#35;ContinuumRobot
                     </td>
                 </tr>
 
