Added the link to IEEE Xplore for IROS2022

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <img alt="clean-usnob" height="109" src="images/2022_IROS_setup_tinywow.png" width="160">
                     </td>
                     <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
-                        <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">
+                        <a href="https://doi.org/10.1109/IROS47612.2022.9981719">
                             <papertitle>A Dataset and Benchmark for Learning the Kinematics of Concentric Tube Continuum
                                 Robots
                             </papertitle>
@@ -110,6 +110,8 @@
                         <em>IEEE/RAS IROS</em>, 2022
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_et_al_IROS_2022.pdf">paper</a>
+                        /
+                        <a href="https://doi.org/10.1109/IROS47612.2022.9981719">IEEE Xplore</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
                         /
