--- a/index.html
+++ b/index.html
@@ -90,6 +90,38 @@
                 <!-- PAPER -->
                 <tbody>
 
+                <!--GrassmannBurgner-Kahrs_et_al_arXiv_2023-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="90" src="images/2023_ActuationUnit_tinywow.jpg" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
+                        <a href="http://www.opencontinuumrobotics.com">
+                            <papertitle>Open Continuum Robotics – One Actuation Module to Create them All
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="https://scholar.google.com/citations?user=eLZ4kpAAAAAJ">Chengnan Shentu</a>,
+                        <a href="TaqiHamoda">Taqi Hamoda</a>,
+                        <a href="PuspitaTrianaDewi">Puspita Triana Dewi</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>arXiv</em>, 2023
+                        <br>
+                        <a href="paper/GrassmannBurgner-Kahrs_et_al_arXiv_2023.pdf">paper</a>
+                        /
+                        <a href="arXiv">arXiv</a>
+                        /
+                        <a href="data/GrassmannBurgner-Kahrs_et_al_arXiv_2023.bib">BibTex</a>
+                        /
+                        <a href="http://www.opencontinuumrobotics.com">OpenCR</a>
+                        <p>To democratize continuum robots research, we propose an actuation module to build torque controlled continuum robots and provide open-source software and hardware with
+our initiative called the Open Continuum Robotics Project.</p>
+                        &#35;Design &#35;TorqueControl &#35;ContinuumRobot
+                    </td>
+                </tr>
+
                 <!--GrassmannBurgner-Kahrs_et_al_IROS_2022-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
