--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_et_al_arXiv_2023.pdf">paper</a>
                         /
-                        <a href="arXiv">arXiv</a>
+                        <a href="https://arxiv.org/abs/2304.11850">arXiv</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_arXiv_2023.bib">BibTex</a>
                         /
