add more collaborators

--- a/index.html
+++ b/index.html
@@ -70,15 +70,18 @@
                             (in alphabetical order)
                             <a href="https://crl.utm.utoronto.ca/jbk.html">J. Burgner-Kahrs</a>,
                             <a href="https://ryan-zeyuan-chen.github.io/">R. Z. Chen</a>,
+                            P. T. Dewi,
                             <a href="https://www.mirmi.tum.de/en/rsi/team/haddadin-sami/">S. Haddadin</a>,
+                            T. Hamoda,
                             L. Johannsmeier,
                             V. Modes,
                             P. Le,
                             N. Liang,
                             <a href="https://www.cs.toronto.edu/~slilge/">S. Lilge</a>,
                             <a href="https://team.inria.fr/defrost/team-members/quentin-peyron/">Q. Peyron</a>,
+                            P. Rao,
                             and,
-                            P. Rao.
+                            <a href="https://www.cs.toronto.edu/~cshentu/">C. Shentu</a>.
                         </p>
                     </td>
                 </tr>
