--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_arXiv_2023.bib">BibTex</a>
                         /
-                        <a href="http://www.opencontinuumrobotics.com">OpenCR</a>
+                        <a href="http://www.opencontinuumrobotics.com">OpenCR Project</a>
                         <p>To democratize continuum robots research, we propose an actuation module to build torque controlled continuum robots and provide open-source software and hardware with
 our initiative called the Open Continuum Robotics Project.</p>
                         &#35;Design &#35;TorqueControl &#35;ContinuumRobot
