--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     <td style="padding:20px;width:100%;vertical-align:middle">
                         <heading>Research</heading>
                         <p>
-                            I'm interested in continuum robotics, machine learning, and quaternion.
+                            I'm interested in continuum robotics, machine learning, and dual quaternions.
+                            Aside from that, creativity and philosophy of science are also part of my field of interest.
                         </p>
                         <p>
                             During my research adventures, I have gratefully collaborated or am still collaborating with
