--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             N. Liang,
                             <a href="https://www.cs.toronto.edu/~slilge/">S. Lilge</a>,
                             <a href="https://team.inria.fr/defrost/team-members/quentin-peyron/">Q. Peyron</a>,
-                            P. Rao,
+                            <a href="https://priyankarao257.github.io/">P. Rao</a>,
                             and,
                             <a href="https://www.cs.toronto.edu/~cshentu/">C. Shentu</a>.
                         </p>
