include Research Projects

--- a/index.html
+++ b/index.html
@@ -433,6 +433,90 @@ our initiative called the Open Continuum Robotics Project.</p>
 
                 </tbody>
             </table>
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <!-- PROJECTS -->
+                <tbody>
+
+                <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                        <heading>Research Projects</heading>
+                        <p>
+                            Research projects with my involvement.
+                        </p>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <!-- PROJECTS -->
+                <tbody>
+
+                <!-- Learning the Kinematics of CTCR -->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="122" src="images/Project_OpenCR_tinywow.png" width="160">
+                    </td>
+                    <td style="background-color:#f4f5f4" valign="middle" width="100%">
+                        <p><i>"Open Continuum Robotics Project"</i></p>
+                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                            Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Relevant papers:
+                            <br>
+                            - <a href="https://arxiv.org/abs/2304.11850">
+                                <i>Open Continuum Robotics – One Actuation Module to Create them All
+                                </i>
+                            </a>
+                            <br>
+                            - <a href="https://openreview.net/forum?id=bYLFxFQPFtX">
+                            <i>CTCR Prototype Development: An Obstacle in the Research Community?</i>
+                            </a>
+                        </p>
+                    </td>
+                </tr>
+
+                <!-- Learning the Kinematics of CTCR -->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="109" src="images/Project_CTCR_tinywow.jpg" width="160">
+                    </td>
+                    <td valign="middle" width="100%">
+                        <p><i>"Learning the Kinematics of Tubular Continuum Robots"</i></p>
+                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                            Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Relevant papers:
+                            <br>
+                            - <a href="https://doi.org/10.1109/IROS47612.2022.9981719">
+                                <i>A Dataset and Benchmark for Learning the Kinematics of Concentric Tube Continuum
+                                    Robots
+                                </i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">
+                                <i>Learning-based Inverse Kinematics from Shape as Input for Concentric Tube
+                                    Continuum Robots
+                                </i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.15607/RSS.2019.XV.017">
+                                <i>On the Merits of Joint Space and Orientation Representations in Learning the
+                                    Forward Kinematics in SE(3)
+                                </i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.1109/IROS.2018.8594451">
+                                <i>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum
+                                    Robot in SE(3)
+                                </i>
+                            </a>
+                        </p>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
         </td>
     </tr>
 
