add acknowledgment thingy

--- a/index.html
+++ b/index.html
@@ -517,6 +517,27 @@ our initiative called the Open Continuum Robotics Project.</p>
 
                 </tbody>
             </table>
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <!-- ACKNOWLEDGMENT -->
+                <tbody>
+
+                <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                        <heading>Acknowledgment</heading>
+                        <p>
+                            I made it in the acknowledgment section of the following papers :)
+                        </p>
+                        - <a href="https://doi.org/10.1109/LRA.2022.3185377">
+                            <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
+                            </i>
+                        </a>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+
         </td>
     </tr>
 
