--- a/index.html
+++ b/index.html
@@ -532,6 +532,10 @@ our initiative called the Open Continuum Robotics Project.</p>
                             <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
                             </i>
                         </a>
+                        - <a href="https://arxiv.org/abs/2011.12460">
+                            <i>Experiments in Autonomous Driving Through Imitation Learning
+                            </i>
+                        </a>
                     </td>
                 </tr>
 
