--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <heading>Research</heading>
                         <p>
                             I'm interested in continuum robotics, machine learning, and dual quaternions.
-                            Aside from that, creativity and philosophy of science are also part of my field of interest.
+                            Aside from that, creativity, innovation, and philosophy of science are also part of my field of interest.
                         </p>
                         <p>
                             During my research adventures, I have gratefully collaborated or am still collaborating with
