--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <a href="https://ryan-zeyuan-chen.github.io/">R. Z. Chen</a>,
                             P. T. Dewi,
                             <a href="https://www.mirmi.tum.de/en/rsi/team/haddadin-sami/">S. Haddadin</a>,
-                            T. Hamoda,
+                            <a href="https://taqihamoda.github.io/">T. Hamoda</a>,
                             L. Johannsmeier,
                             V. Modes,
                             P. Le,
