--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <img alt="clean-usnob" height="95" src="images/Project_OpenCR_tinywow.png" width="160">
                     </td>
                     <td style="background-color:#f4f5f4" valign="middle" width="100%">
-                        <p><i>"Open Continuum Robotics Project"</i> (<a href="https://www.opencontinuumrobotics.com/">link to OpenCR Project<\a>, <a href="https://crl.utm.utoronto.ca/_pages/opencr.html">link to project description<\a>)</p>
+                        <p><i>"Open Continuum Robotics Project"</i> (<a href="https://www.opencontinuumrobotics.com/">link to OpenCR Project</a>, <a href="https://crl.utm.utoronto.ca/_pages/opencr.html">link to project description</a>)</p>
                         <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
@@ -483,7 +483,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <img alt="clean-usnob" height="109" src="images/Project_CTCR_tinywow.jpg" width="160">
                     </td>
                     <td valign="middle" width="100%">
-                        <p><i>"Learning the Kinematics of Tubular Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/tubular.html">link to project description<\a>)</p>
+                        <p><i>"Learning the Kinematics of Tubular Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/tubular.html">link to project description</a>)</p>
                         <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
