--- a/index.html
+++ b/index.html
@@ -532,11 +532,13 @@ our initiative called the Open Continuum Robotics Project.</p>
                             <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
                             </i>
                         </a>
+                        (RA-L, 2022)
                         <br>
                         - <a href="https://arxiv.org/abs/2011.12460">
                             <i>Experiments in Autonomous Driving Through Imitation Learning
                             </i>
                         </a>
+                        (arXiv, 2020)
                     </td>
                 </tr>
 
