--- a/index.html
+++ b/index.html
@@ -528,6 +528,12 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <p>
                             I made it in the acknowledgment section of the following papers :)
                         </p>
+                        - <a >
+                            <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
+                            </i>
+                        </a>
+                        (RoboSoft 2024, accepted)
+                        <br>
                         - <a href="https://doi.org/10.1109/LRA.2022.3185377">
                             <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
                             </i>
