--- a/index.html
+++ b/index.html
@@ -94,6 +94,33 @@
                 <!-- PAPER -->
                 <tbody>
 
+                <!--GrassmannSenykBurgner-Kahrs_ICRA_2024-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="82" src="images/2024_CTCR_Space_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
+                        <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">
+                            <papertitle>On the Disentanglement of Tube Inequalities in Concentric Tube Continuum Robots
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="AnastasiiaSenyk">Anastasiia Senyk</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>IEEE ICRA</em>, 2024 (accepted)
+                        <br>
+                        <a href="paper/GrassmannSenykBurgner-Kahrs_ICRA_2024.pdf">paper</a>
+                        /
+                        <a href="empty">IEEE Xplore</a>
+                        /
+                        <a href="data/GrassmannSenykBurgner-Kahrs_ICRA_2024.bib">BibTex</a>
+                        <p>We derive and investigate the lower triangular transformation matrix to disentangle the tube inequalities.</p>
+                        &#35;Disentanglement &#35;Representation &#35;ContinuumRobot
+                    </td>
+                </tr>
+
                 <!--GrassmannBurgner-Kahrs_et_al_arXiv_2023-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
