--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                             <a href="https://www.cs.toronto.edu/~slilge/">S. Lilge</a>,
                             <a href="https://team.inria.fr/defrost/team-members/quentin-peyron/">Q. Peyron</a>,
                             <a href="https://priyankarao257.github.io/">P. Rao</a>,
+                            A. Senyk,
                             and,
                             <a href="https://www.cs.toronto.edu/~cshentu/">C. Shentu</a>.
                         </p>
