--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <img alt="clean-usnob" height="109" src="images/Project_CTCR_tinywow.jpg" width="160">
                     </td>
                     <td valign="middle" width="100%">
-                        <p><i>"Learning the Kinematics of Tubular Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/tubular.html">link to project description</a>)</p>
+                        <p><i>"Learning the Kinematics of Tubular Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/learning.html">link to project description</a>)</p>
                         <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
