--- a/index.html
+++ b/index.html
@@ -543,6 +543,28 @@ our initiative called the Open Continuum Robotics Project.</p>
                     </td>
                 </tr>
 
+                <!-- Algorithms for Continuum Robots -->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="49" src="images/Project_algorithm_tinywow.png" width="160">
+                    </td>
+                    <td style="background-color:#f4f5f4" valign="middle" width="100%">
+                        <p><i>"Algorithms for Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/algorithms.html">link to project description</a>)</p>
+                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                            Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Relevant papers:
+                            <br>
+                            - <a href="empty">
+                            <i>On the Disentanglement of Tube Inequalities in Concentric Tube Continuum Robots</i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.1109/IROS.2018.8594339">
+                                <i>Quaternion-Based Smooth Trajectory Generator for Via Poses in SE(3) Considering Kinematic Limits in Cartesian Space</i>
+                            </a>
+                        </p>
+                    </td>
+                </tr>
+
                 </tbody>
             </table>
 
