--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <br>
                         <a href="paper/GrassmannSenykBurgner-Kahrs_ICRA_2024.pdf">paper</a>
                         /
-                        <a href="empty">IEEE Xplore</a>
+                        <a href="https://arxiv.org/abs/2402.12587">arXiv</a>
                         /
                         <a href="data/GrassmannSenykBurgner-Kahrs_ICRA_2024.bib">BibTex</a>
                         <p>We derive and investigate the lower triangular transformation matrix to disentangle the tube inequalities.</p>
@@ -144,6 +144,8 @@
                         <a href="paper/GrassmannBurgner-Kahrs_et_al_arXiv_2023.pdf">paper</a>
                         /
                         <a href="https://arxiv.org/abs/2304.11850">arXiv</a>
+                        /
+                        <a href="https://doi.org/10.3389/frobt.2024.1272403">Front. Robot. AI</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_arXiv_2023.bib">BibTex</a>
                         /
