updated ICRA2024 and Frontiers 2024

--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
                         <a href="AnastasiiaSenyk">Anastasiia Senyk</a>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>IEEE ICRA</em>, 2024 (accepted)
+                        <em>IEEE ICRA</em>, 2024
                         <br>
                         <a href="paper/GrassmannSenykBurgner-Kahrs_ICRA_2024.pdf">paper</a>
+                        /
+                        <a href="https://doi.org/10.1109/ICRA57147.2024.10610322">IEEE Xplore</a>
                         /
                         <a href="https://arxiv.org/abs/2402.12587">arXiv</a>
                         /
@@ -139,7 +141,7 @@
                         <a href="PuspitaTrianaDewi">Puspita Triana Dewi</a>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>arXiv</em>, 2023
+                        <em>Frontiers in Robotics and AI</em>, 2024
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_et_al_arXiv_2023.pdf">paper</a>
                         /
