Add Clarke transform manuscript

--- a/index.html
+++ b/index.html
@@ -95,6 +95,35 @@
                 <!-- PAPER -->
                 <tbody>
 
+                <!--GrassmannSenykBurgner-Kahrs_arXiv_2024-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="82" src="images/2024_ClarkeTransform_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
+                        <a href="https://doi.org/10.48550/arXiv.2409.16501">
+                            <papertitle>Clarke Transform — A Fundamental Tool for Continuum Robotics
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="AnastasiiaSenyk">Anastasiia Senyk</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>arXiv</em>, 2024
+                        <br>
+                        <a href="paper/GrassmannSenykBurgner-Kahrs_arXiv_2024.pdf">paper</a>
+                        /
+                        <a href="https://arxiv.org/abs/2409.16501">arXiv</a>
+                        /
+                        <a href="paper/Clarke_Transform_Cheat_Sheet.pdf">Cheat Sheet</a>
+                        /
+                        <a href="data/GrassmannSenykBurgner-Kahrs_arXiv_2024.bib">BibTex</a>
+                        <p>We propose the Clarke transform and Clarke coordinates.</p>
+                        &#35;Manifold &#35;Representation &#35;ContinuumRobot
+                    </td>
+                </tr>
+
                 <!--GrassmannSenykBurgner-Kahrs_ICRA_2024-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
