updated contribution to research projects

--- a/index.html
+++ b/index.html
@@ -587,8 +587,12 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
-                            - <a href="empty">
-                            <i>On the Disentanglement of Tube Inequalities in Concentric Tube Continuum Robots</i>
+                            - <a href="https://doi.org/10.48550/arXiv.2409.16501">
+                                <i>Clarke Transform — A Fundamental Tool for Continuum Robotics</i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.1109/ICRA57147.2024.10610322">
+                                <i>On the Disentanglement of Tube Inequalities in Concentric Tube Continuum Robots</i>
                             </a>
                             <br>
                             - <a href="https://doi.org/10.1109/IROS.2018.8594339">
