updated Clarke transform

--- a/index.html
+++ b/index.html
@@ -116,10 +116,12 @@
                         /
                         <a href="https://arxiv.org/abs/2409.16501">arXiv</a>
                         /
+                        <a href="data/GrassmannSenykBurgner-Kahrs_arXiv_2024.bib">BibTex</a>
+                        /
                         <a href="paper/Clarke_Transform_Cheat_Sheet.pdf">Cheat Sheet</a>
                         /
-                        <a href="data/GrassmannSenykBurgner-Kahrs_arXiv_2024.bib">BibTex</a>
-                        <p>We propose the Clarke transform and Clarke coordinates.</p>
+                        <a href="https://doi.org/10.48550/arXiv.2409.13826">extended abstract (arXiv)</a>
+                        <p>We propose the Clarke transform and Clarke coordinates enabling the development of methods on the two-dimensional manifold embedded in the n-dimensional joint space.</p>
                         &#35;Manifold &#35;Representation &#35;ContinuumRobot
                     </td>
                 </tr>
