--- a/index.html
+++ b/index.html
@@ -617,6 +617,12 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <p>
                             I made it in the acknowledgment section of the following papers :)
                         </p>
+                        - <a href="https://arxiv.org/abs/2409.09970">
+                            <i>A Non-Linear Model Predictive Task-Space Controller Satisfying Shape Constraints for Tendon-Driven Continuum Robots
+                            </i>
+                        </a>
+                        (arXiv, 2024)
+                        <br>
                         - <a >
                             <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
                             </i>
