--- a/index.html
+++ b/index.html
@@ -617,20 +617,30 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <p>
                             I made it in the acknowledgment section of the following papers :)
                         </p>
+                        - <a href="https://doi.org/10.48550/arXiv.2409.09970">
+                            <I>
+                                A Non-Linear Model Predictive Task-Space Controller Satisfying Shape Constraints for Tendon-Driven Continuum Robots
+                            </i>
+                        </a>
+                        (arXiv, 2024)
+                        <br>
                         - <a >
-                            <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
+                            <I>
+                                A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
                             </i>
                         </a>
                         (RoboSoft 2024, accepted)
                         <br>
                         - <a href="https://doi.org/10.1109/LRA.2022.3185377">
-                            <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
+                            <I>
+                                Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
                             </i>
                         </a>
                         (IEEE RA-L, 2022)
                         <br>
                         - <a href="https://arxiv.org/abs/2011.12460">
-                            <i>Experiments in Autonomous Driving Through Imitation Learning
+                            <I>
+                                Experiments in Autonomous Driving Through Imitation Learning
                             </i>
                         </a>
                         (arXiv, 2020)
