updated acknowledgment section

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         </a>
                         (arXiv, 2024)
                         <br>
-                        - <a >
+                        - <a href="https://doi.org/10.1109/RoboSoft60065.2024.10522016">
                             <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
                             </i>
                         </a>
@@ -636,7 +636,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         </a>
                         (IEEE RA-L, 2022)
                         <br>
-                        - <a href="https://arxiv.org/abs/2011.12460">
+                        - <a href="https://doi.org/10.48550/arXiv.2011.12460">
                             <i>Experiments in Autonomous Driving Through Imitation Learning
                             </i>
                         </a>
