updated acknowledgment section

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                             <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
                             </i>
                         </a>
-                        (RoboSoft 2024, accepted)
+                        (RoboSoft 2024)
                         <br>
                         - <a href="https://doi.org/10.1109/LRA.2022.3185377">
                             <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
