--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <a href="data/GrassmannBurgner-Kahrs_et_al_Frontiers_2024.bib">BibTex</a>
                         /
                         <a href="http://www.opencontinuumrobotics.com">OpenCR Project</a>
-                        <p>To democratize continuum robots research, we propose an actuation module to build torque controlled continuum robots and provide open-source software and hardware with
+                        <p>To democratize continuum robots research, we propose an actuation module to build torque-controlled continuum robots and provide open-source software and hardware with
 our initiative called the Open Continuum Robotics Project.</p>
                         &#35;Design &#35;TorqueControl &#35;ContinuumRobot
                     </td>
@@ -215,7 +215,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <a href="data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
                         /
                         <a href="https://github.com/ContinuumRoboticsLab/CRL-Dataset-CTCR-Pose">GitHub</a>
-                        <p>We provide the first public dataset for a three-tube CTCR to democrotize research on
+                        <p>We provide the first public dataset for a three-tube CTCR to democratize research on
                             learning-based and physics-based modelling of the kinematics.</p>
                         &#35;Dataset &#35;MachineLearning &#35;ContinuumRobot
                     </td>
@@ -426,7 +426,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>
                         /
                         <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
-                        <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric
+                        <p>We introduce a joint description to learn the forward and inverse kinematics for concentric
                             tube continuum robots from real robot measurements.</p>
                         &#35;MachineLearning &#35;Quaternion &#35;ContinuumRobot
                     </td>
@@ -443,7 +443,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                         <heading>Theses</heading>
                         <p>
-                            Theses I wrote during my mechatronics studies at <a
+                            Theses that I wrote during my mechatronics studies at <a
                                 href="https://www.uni-hannover.de/en/">Leibniz University Hannover</a>.
                         </p>
                     </td>
