--- a/index.html
+++ b/index.html
@@ -615,8 +615,14 @@ our initiative called the Open Continuum Robotics Project.</p>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                         <heading>Acknowledgment</heading>
                         <p>
-                            I made it in the acknowledgment section of the following papers :)
+                            I made it in the acknowledgment section of the following papers and video :)
                         </p>
+                        - <a href="https://youtu.be/eP06ltS-pUs">
+                            <I>
+                                Continuum Robotics: Innovation inspired by Nature
+                            </i>
+                        </a>
+                        (Tunyalux Langsub's Master's Research Project, 2024)
                         - <a href="https://doi.org/10.48550/arXiv.2409.09970">
                             <I>
                                 A Non-Linear Model Predictive Task-Space Controller Satisfying Shape Constraints for Tendon-Driven Continuum Robots
@@ -628,7 +634,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                             <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
                             </i>
                         </a>
-                        (RoboSoft 2024)
+                        (IEEE RoboSoft 2024)
                         <br>
                         - <a href="https://doi.org/10.1109/LRA.2022.3185377">
                             <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
